# c8

./: .gitignore  Cargo.toml  LICENSE  README.md
rom-c8/: Test OOB Fetch 2.ch8  Test OOB Return.ch8
rom-readmes/: Test README.txt
roms/: IBM Logo Incorrect.ch8  OOB Jump With Offset Test.ch8  OOB Load Test.ch8  OOB Store Decimal Test.ch8  OOB Store Test.ch8  Test OOB Display.ch8  Test OOB Fetch.ch8
roms/c8/: test_oob_load_exec.ch8
roms/xo/: alien_inv8sion.ch8  alien_inv8sion_octo.ch8  bad_apple.ch8  bad_apple2.ch8  bad_apple_hd.ch8  bad_apple_song.ch8  beware_of_snake.ch8  snake.ch8  testaudio.ch8  tracker_demo.ch8  xomp2.ch8
src/: analysis.rs  asm.rs  cli.rs  config.rs  debug.rs  disass.rs  disp.rs  input.rs  interp.rs  main.rs  prog.rs  render.rs  run.rs  util.rs  vm.rs
src/ch8/: audio.rs  disp.rs  instruct.rs  interp.rs  mem.rs  mod.rs  rom.rs  run.rs  stats.rs  vm.rs
src/dbg/: cli.rs  core.rs  debug.rs  hist.rs  mem.rs  mod.rs  shell.rs
src/run/: audio.rs  color.rs  core.rs  disp.rs  input.rs  instruct.rs  interp.rs  mem.rs  mod.rs  preset.rs  prog.rs  rom.rs  vm.rs
src/set/: color.rs  mod.rs  preset.rs
src/vm/: core.rs  disp.rs  input.rs  interp.rs  mod.rs  prog.rs  run.rs
